<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:background="@color/black"
    tools:context="com.example.julian.calculator.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/res"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:maxLength="14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="37dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="22dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintHorizontal_bias="0.509" />

    <EditText
        android:id="@+id/currCalc"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <Button

                android:id="@+id/btn1"

                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/_1"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <View
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/_2"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <View
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/_3"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />


        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="170dp">

            <Button
                android:id="@+id/btn4"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/_4"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <View
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/_5"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <View
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/_6"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="220dp">

            <Button
                android:id="@+id/btn7"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/_7"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <View
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/_8"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <View
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/_9"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="270dp">

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:text="@string/_del"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <View
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/_0"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <View
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/_dot"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="343dp">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/_plus"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/_minus"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnMul"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/_mult"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/_div"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <Button
                android:id="@+id/btnEnter"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/_Enter"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnClr"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/_CLEAR"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
